# olio-ohjelmointi

./: README.md
kt3Olio-ohjelmointi/: CMakeLists.txt  main.cpp
kt3teht2/: CMakeLists.txt  main.cpp
kt3teht4/: CMakeLists.txt  main.cpp
